# nomenus-rex

./: CHANGELOG  CLIparser.cpp  CLIparser.h  CMakeLists.txt  README  cfgvarsingleton.cpp  cfgvarsingleton.h  configurationparser.cpp  configurationparser.h  main.cpp  renamer.cpp  renamer.h  rule.cpp  rule.h  version.h.in
Progressator/: progressator.cpp  progressator.h
Rules/: ruleBase.cpp  ruleBase.h  ruleDate.cpp  ruleDate.h  ruleDir.cpp  ruleDir.h  ruleExec.cpp  ruleExec.h  ruleExtension.cpp  ruleExtension.h  ruleFileCreationDate.cpp  ruleFileCreationDate.h  ruleFilename.cpp  ruleFilename.h  ruleFilesize.cpp  ruleFilesize.h  ruleInteger.cpp  ruleInteger.h  ruleReplace.cpp  ruleReplace.h  ruleText.cpp  ruleText.h  rules.h
Tests/: tests.cpp  tests.h
